--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,14 @@
 <resources>
     <string name="app_name">ChaletIn</string>
-	<string name="intro1_head">توفير شاليهات متنوعة مناسبة للجميع</string>
+    <string name="intro1_head">توفير شاليهات متنوعة مناسبة للجميع</string>
     <string name="intro2_head">سهولة البحث عن الشاليهات</string>
     <string name="intro3_head">شاهد تفاصيل الشاليهات</string>
+      <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="action_settings">Settings</string>
+    <string name="google_maps_api_key"> AIzaSyCPtA8_L-yk60v5DWAO_U65YGUb9UfUh30</string>
+	
 </resources>
