--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,12 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
     <string name="google_maps_api_key"> AIzaSyCPtA8_L-yk60v5DWAO_U65YGUb9UfUh30</string>
-	
+    <string name="input_error_name">Name is Required</string>
+    <string name="input_error_email">E-mail is Required</string>
+    <string name="input_error_email_invalid">E-mail is Invalid</string>
+    <string name="input_error_password">Password is Required</string>
+    <string name="input_error_password_length">Password should be more than or equal to 6 characters</string>
+    <string name="input_error_phone">Phone is Required</string>
+    <string name="input_error_phone_invalid">Phone Number Invalid</string>
+
 </resources>
